--- a/AI/Agent/Agent.vcxproj
+++ b/AI/Agent/Agent.vcxproj
@@ -99,11 +99,12 @@
     <ClCompile Include="..\AStar\source\InputManager.cpp" />
     <ClCompile Include="source\Agent.cpp" />
     <ClCompile Include="source\Arrive.cpp" />
-    <ClCompile Include="source\Avoid.cpp" />
+    <ClCompile Include="source\AvoidWalls.cpp" />
     <ClCompile Include="source\Character.cpp" />
     <ClCompile Include="source\CopyMousePosition.cpp" />
     <ClCompile Include="source\Evade.cpp" />
     <ClCompile Include="source\Flee.cpp" />
+    <ClCompile Include="source\FlipSprite.cpp" />
     <ClCompile Include="source\Flock.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\IBehaviour.cpp" />
@@ -125,12 +126,13 @@
     <ClInclude Include="..\AStar\source\InputManager.h" />
     <ClInclude Include="source\Agent.h" />
     <ClInclude Include="source\Arrive.h" />
-    <ClInclude Include="source\Avoid.h" />
+    <ClInclude Include="source\AvoidWalls.h" />
     <ClInclude Include="source\Behaviors.h" />
     <ClInclude Include="source\Character.h" />
     <ClInclude Include="source\CopyMousePosition.h" />
     <ClInclude Include="source\Evade.h" />
     <ClInclude Include="source\Flee.h" />
+    <ClInclude Include="source\FlipSprite.h" />
     <ClInclude Include="source\Flock.h" />
     <ClInclude Include="source\GameObject.h" />
     <ClInclude Include="source\IBehavior.h" />
