Worlds worst connect 4 player
- just plays random moves

--- a/AI/connect4/Connect4.vcxproj
+++ b/AI/connect4/Connect4.vcxproj
@@ -90,6 +90,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\AI.cpp" />
     <ClCompile Include="source\Grid.cpp" />
     <ClCompile Include="source\GridTile.cpp" />
     <ClCompile Include="source\InputManager.cpp" />
@@ -98,6 +99,7 @@
     <ClCompile Include="source\WinMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\AI.h" />
     <ClInclude Include="source\Grid.h" />
     <ClInclude Include="source\GridTile.h" />
     <ClInclude Include="source\InputManager.h" />
