--- a/AI/connect4/Connect4.vcxproj.filters
+++ b/AI/connect4/Connect4.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClCompile Include="source\Grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\AI.cpp">
+    <ClCompile Include="source\Position.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,7 +53,7 @@
     <ClInclude Include="source\Grid.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\AI.h">
+    <ClInclude Include="source\Position.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
