--- a/AI/connect4/Connect4.vcxproj.filters
+++ b/AI/connect4/Connect4.vcxproj.filters
@@ -27,13 +27,10 @@
     <ClCompile Include="source\InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\TimeManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="source\Grid.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="source\Position.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Board.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -47,13 +44,10 @@
     <ClInclude Include="source\InputManager.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\TimeManager.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Grid.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="source\Position.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Board.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
