--- a/AI/connect4/Connect4.vcxproj.filters
+++ b/AI/connect4/Connect4.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="source\Board.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\AI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\GridTile.h">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="source\Board.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\AI.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
